# chaincash

./: .gitignore  AGENTS.md  README.md  build.sbt  participants.csv.template  sign_request.json
basis-private-tracker/: Cargo.toml
basis-private-tracker/src/: lib.rs  tracker.rs  types.rs
contracts/offchain/: abstract.md  basis-private.es  basis-token.es  basis.es  basis.md  basis_private_reserve.es  basis_private_reserve.md  reserve.es  tracker.md
contracts/offchain/apps/: silvercents.md
contracts/onchain/: note.es  privacy_reserve.es  reserve.es
contracts/privacy/: README.md  blind-signature-spec.md  private-basis.es
demo/basis/: README.md
demo/basis/agents/: README.md  SPEC.md
demo/basis/circular/: QUICKSTART.md  README.md  calculate_netting.py  sample_ledger.json  settle_netting.py  transfer_debt.sh  visualize_circle.py
demo/basis/mesh/: IMPLEMENTATION_PLAN.md  MCP_SERVER.md  MESHTASTIC.md  README.md  listen_basis_iou.py  send_basis_iou.py
demo/basis/simple/: README.md  SPECIFICATION.md  debug_signing.sh  (+4 more)
demo/mesh/: DEMO.md  send_basis_message.sh
docs/: IMPLEMENTATION_SUMMARY.md  ai-agents-economy-spec.md  basis_current_design.md  basis_private_chaumian_poc.md  basis_private_summary_for_pr.md  chaumian-offchain-cash.md  example_owner_key.md  miw.md  private-offchain-cash-research.md  private-offchain-cash.md  silvercents.md
docs/basis/: basis.tex  compile.sh  ifcolog.cls  sources.bib
docs/conf/: conf.tex  sources.bib
docs/lnmiit/: lntmit.md
docs/presentation/: presentation.md
research/private-offchain-cash/: README.md  RESEARCH_PAPER.md
(+50 files in other folders)
